<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="160dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/tvTituloReserva"
        android:textColor="#4D4E4E"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:text="@string/tvMensajeReserva"
            android:textColor="#4D4E4E"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:inputType="number"
            android:maxLength="9"
            android:textColor="#4D4D4D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10sp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:text="@string/btnCancelar"
            android:textColor="#EF6C00"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:text="@string/btnReservar"
            android:textColor="#EF6C00"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>