<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#FFFF"
    android:orientation="vertical">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_soporte"
        android:contentDescription="@string/iconoSoporte" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSoporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/txtSoporte"
            android:textColor="#737373"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnCloseDialog"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:text="@string/btnOk"
            android:textColor="#EF6C00"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>